# agentic-security-harness

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.clusterfuzzlite/: Dockerfile  build.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  research_pattern.yml
.github/workflows/: ci.yml  clusterfuzzlite.yml  codeql.yml  release.yml  scorecard.yml
docs/: adapter-contract.md  agent-operating-guide.md  agentic-boundary-model.md  agentic-rule-violation-backpass.md  api-reference.md  architecture.md  artifact-authenticity-design.md  artifact-schemas.md  authorized-testing-paths.md  benchmark-positioning-gap-list.md  benchmark-protocol.md  benchmark-semantics.md  boundary-layer-evidence-matrix.md  bounded-local-swarm.md  bring-your-own-target.md  capability-matrix.md  competitors.md  connect-models.md  context-consent-campaign.md  corpus-expansion-plan.md  corpus.md  crypto-integrity-model.md  current-state.md  custom-adapter-tutorial.md  deployment.md  development.md  evaluation-topologies.md  evidence-assurance-model.md  evidence-classes.md  evidence-pack-format.md  evidence-quality.md  evidence-status-registry.json  getting-started.md  git-evidence-workflow.md  handoff-toy-topology.md  harness.md  how-it-differs.md  independent-benchmark-gap-list.md  inter-agent-handoff-integrity.md  live-mini-swarm-defense-campaign.md  (+75 more)
docs/learning/: 01-agentic-security-basics.md  02-data-boundary-failures.md
docs/showcase/: deepening-backlog.md  (+6 more)
examples/: README.md  fake_openai_server.py
fuzz/: __init__.py  artifact_validation_fuzzer.py  external_decision_fuzzer.py
requirements/: build.in  build.txt  dev.in  dev.txt  runtime.txt
schemas/: README.md  remediation.schema.json  run-manifest.schema.json  scorecard.schema.json  trace.schema.json
tests/: conftest.py  test_adapters.py  test_attestation_policy.py  test_boundary_variation_matrices.py  test_cli.py  test_cli_authority.py  test_context_consent_campaign.py  test_corpus.py  test_demo_agent.py  test_doctor.py  test_documentation_contract.py  test_e2e.py  test_envelope_policy.py  test_evidence_campaign.py  test_evidence_quality.py  test_evidence_status.py  test_external.py  test_fuzzing_integration.py  test_golden_snapshots.py  test_ground_truth.py  test_handoff_integrity.py  test_html_report.py  test_local_suite.py  test_local_swarm.py  test_local_swarm_ablation.py  test_local_swarm_allowed.py  test_local_swarm_matrix.py  test_marketing_web_injection_campaign.py  test_marketing_web_live_campaign.py  test_matrix.py  test_memory_governance.py  test_memory_rehydration_campaign.py  test_models.py  test_packaging.py  test_planner_task_campaign.py  test_presets.py  test_protected.py  test_public_artifact_hygiene.py  test_rag_context_campaign.py  test_reconciliation.py  (+35 more)
tools/: __init__.py  normalize_sdist.py
(+252 files in other folders)
